retrained with best params

--- a/news_classification.ipynb
+++ b/news_classification.ipynb
@@ -1230,8 +1230,10 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "be71762c",
-   "metadata": {},
+   "id": "c3fc72fc",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1306,22 +1308,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "7c42637d",
+   "cell_type": "markdown",
+   "id": "be66d135",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Retraining with best params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "3d435178",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on validation set: 0.9060402684563759\n"
+     ]
+    }
+   ],
    "source": [
     "tuned_params = {'max_features': 6843, \n",
     "                'max_df': 0.7979675957237654, 'ngram_range': (1, 2),\n",
-    "                'init': 'random', 'beta_loss': 'kullback-leibler'}\n",
+    "                'init': 'nndsvd', 'beta_loss': 'kullback-leibler'}\n",
+    "\n",
+    "tfidf_vectorizer = TfidfVectorizer(stop_words=STOP_WORDS, max_features=tuned_params['max_features'],\n",
+    "                                   max_df=tuned_params['max_df'], ngram_range=tuned_params['ngram_range'])\n",
+    "\n",
+    "\n",
+    "train_tdidf_matrix = tfidf_vectorizer.fit_transform(text_train)\n",
+    "val_tfidf_matrix = tfidf_vectorizer.transform(text_val)\n",
+    "\n",
+    "nmf_decomposer = NMF(n_components=5, solver=\"mu\",\n",
+    "                     init=tuned_params['init'], beta_loss=tuned_params['beta_loss'],\n",
+    "                     random_state=1)\n",
+    "\n",
+    "nmf_decomposer.fit(train_tdidf_matrix)\n",
+    "\n",
+    "W_val = nmf_decomposer.transform(val_tfidf_matrix)\n",
+    "H_val = nmf_decomposer.components_\n",
+    "\n",
+    "val_predictions = np.argmax(W_val, axis=1) + 1\n",
+    "matched_map = match_predictions(val_predictions, labels_val)\n",
+    "val_categories_predicted = [matched_map[topic] for topic in val_predictions]\n",
+    "\n",
+    "accuracy = accuracy_score(labels_val, val_categories_predicted)\n",
+    "print(\"Accuracy on validation set:\", accuracy)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91975a1a",
+   "id": "d838b143",
    "metadata": {},
    "outputs": [],
    "source": []
