added more comments

--- a/news_classification.ipynb
+++ b/news_classification.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4ae75b52",
+   "metadata": {},
+   "source": [
+    "NMF notebook - https://www.kaggle.com/code/rockystats/topic-modelling-using-nmf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "655f22c2",
@@ -861,7 +869,33 @@
    "id": "ebb37632",
    "metadata": {},
    "source": [
-    "### Preprocessing"
+    "## TF-IDF (Term Frequency-Inverse Document Frequency)\n",
+    "\n",
+    "TF-IDF stands for Term Frequency-Inverse Document Frequency. It's a numerical statistic that reflects how important a word is to a document in a collection or corpus. The TF-IDF value increases proportionally to the number of times a word appears in the document but is offset by the frequency of the word in the corpus, which helps to adjust for the fact that some words appear more frequently in general.\n",
+    "\n",
+    "### Overview\n",
+    "\n",
+    "TF-IDF is used in a variety of applications including text mining, information retrieval, and user modeling. The TF-IDF weighting scheme is composed of two parts:\n",
+    "\n",
+    "1. **Term Frequency (TF)**: Measures how frequently a term occurs in a document. Since every document is different in length, it is possible that a term would appear much more times in long documents than shorter ones. Thus, the term frequency is often divided by the document length (the total number of terms in the document) as a way of normalization:\n",
+    "\n",
+    "    $$TF(t) = \\left(\\frac{\\text{Number of times term } t \\text{ appears in a document}}{\\text{Total number of terms in the document}}\\right)$$\n",
+    "\n",
+    "2. **Inverse Document Frequency (IDF)**: Measures how important a term is. While computing TF, all terms are considered equally important. However, it is known that certain terms, such as \"is\", \"of\", and \"that\", may appear a lot of times but have little importance. Thus we need to weigh down the frequent terms while scale up the rare ones, by computing the following:\n",
+    "\n",
+    "    $$IDF(t) = \\log \\left(\\frac{\\text{Total number of documents}}{\\text{Number of documents with term } t \\text{ in it}}\\right)$$\n",
+    "\n",
+    "### Formula\n",
+    "\n",
+    "The TF-IDF value is computed as follows:\n",
+    "\n",
+    "$$TFIDF(t, d) = TF(t, d) \\times IDF(t)$$\n",
+    "\n",
+    "Where:\n",
+    "- $TF(t, d)$ is the term frequency of term $t$ in document $d$.\n",
+    "- $IDF(t)$ is the inverse document frequency of term $t$.\n",
+    "\n",
+    "By multiplying these two values, we get a measure of the importance of a term in the context of a particular document within a larger corpus. This reflects how relevant a term is in a given document, which makes TF-IDF very useful for text analysis and natural language processing tasks.\n"
    ]
   },
   {
@@ -962,7 +996,39 @@
    "id": "4c27e2dd",
    "metadata": {},
    "source": [
-    "### NMF (Non-negative matrix factorization)\n"
+    "\n",
+    "## Non-negative Matrix Factorization (NMF)\n",
+    "\n",
+    "Non-negative Matrix Factorization (NMF) is a group of algorithms in multivariate analysis and linear algebra where a matrix `V` is factorized into (usually) two matrices `W` and `H`, with the property that all three matrices have no negative elements. This non-negativity makes the resulting matrices easier to inspect. NMF is commonly used for dimensionality reduction, clustering, and as a topic model in text mining.\n",
+    "\n",
+    "### Overview\n",
+    "\n",
+    "In the context of topic modeling, NMF is used to decompose high-dimensional text data into two lower-dimensional matrices. The goal is to identify the latent structure of the data (topics, themes) by decomposing the original matrix of documents into two matrices: \n",
+    "\n",
+    "- **W (Document-Topic matrix):** Each row corresponds to a document and each column corresponds to a topic. \n",
+    "- **H (Topic-Term matrix):** Each row corresponds to a topic and each column corresponds to a term in the corpus vocabulary.\n",
+    "\n",
+    "### Formula\n",
+    "\n",
+    "The basic idea is to approximate the original term-document matrix `V` (with dimensions `n x m`) as the product of two lower-rank non-negative matrices `W` (with dimensions `n x k`) and `H` (with dimensions `k x m`):\n",
+    "\n",
+    "$$V \\approx WH$$\n",
+    "\n",
+    "Where:\n",
+    "- `V` is the original term-document matrix.\n",
+    "- `W` is the document-topic matrix.\n",
+    "- `H` is the topic-term matrix.\n",
+    "- `k` is the number of topics, and is a hyperparameter chosen by the user.\n",
+    "\n",
+    "These two matrices are often the result of numerical optimization\n",
+    "\n",
+    "### Why NMF for Topic Modeling?\n",
+    "\n",
+    "NMF is particularly useful in topic modeling for the following reasons:\n",
+    "\n",
+    "- **Interpretability:** The non-negativity constraint leads to a parts-based representation because it allows only additive, not subtractive, combinations. This often leads to more interpretable components.\n",
+    "- **Reducing Dimensionality:** NMF reduces the dimensions of the input term-document matrix, making the subsequent analysis more tractable.\n",
+    "- **Discovering Patterns:** The matrices `W` and `H` can be viewed as encoding the information about the pattern of topics in documents and the pattern of words in topics, respectively.\n"
    ]
   },
   {
@@ -1026,6 +1092,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6fdca4c2",
+   "metadata": {},
+   "source": [
+    "\n",
+    " **Document-Topic Matrix ($W$)**:\n",
+    "   - Dimensions: $n \\times k$ (where $n$ is the number of documents, and $k$ is the number of topics)\n",
+    "   - Each row represents a document, and each column represents a topic.\n",
+    "   - Element $W_{ij}$ indicates the weight or contribution of topic $j$ to document $i$.\n",
+    "\n",
+    " **Topic-Term Matrix ($H$)**:\n",
+    "   - Dimensions: $k \\times m$ (where $k$ is the number of topics, and $m$ is the number of terms)\n",
+    "   - Each row represents a topic, and each column represents a term.\n",
+    "   - Element $H_{ij}$ indicates the weight or contribution of term $j$ to topic $i$.\n",
+    "\n",
+    "The relationship between these matrices in the NMF process is given by:\n",
+    "\n",
+    "$$V \\approx W \\times H$$\n",
+    "\n",
+    "- $V$ (Term-Document Matrix): Represents the original data.\n",
+    "- $W$ (Document-Topic Matrix): Represents how much each document is related to each topic.\n",
+    "- $H$ (Topic-Term Matrix): Represents how much each topic is related to each term.\n",
+    "\n",
+    "This factorization allows for the interpretation of topics (latent features) in the documents and the importance of each term in describing the topics. After decomposing matrices, we can look at words vector for each topic (component) and see which words are most weighted in this particular topic. We can observe top 20 words with the largest weights for each topic and try to match each topic with actual category we have to assign\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "501a165f",
@@ -1064,6 +1158,16 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfafc809",
+   "metadata": {},
+   "source": [
+    "From the visualization of words weights in each topic, it is fairly easy to guess which topic belong to which category and properly match our predictions. \n",
+    "\n",
+    "(That's what I've done below)"
    ]
   },
   {
@@ -1159,7 +1263,9 @@
    "id": "bd3da786",
    "metadata": {},
    "source": [
-    "###  Hyperparams tunning"
+    "###  Hyperparams tunning\n",
+    "\n",
+    "Let's tune hyperparameters of tf-idf vectorized and NMF to achive a better result. We will use *optuna* framework that employes Bayesian optimization to search for best params"
    ]
   },
   {
@@ -1230,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c3fc72fc",
+   "id": "c3bbf51c",
    "metadata": {
     "scrolled": false
    },
@@ -1309,7 +1415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be66d135",
+   "id": "6c553f6b",
    "metadata": {},
    "source": [
     "### Retraining with best params"
@@ -1318,7 +1424,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "3d435178",
+   "id": "97badcc2",
    "metadata": {},
    "outputs": [
     {
@@ -1360,9 +1466,154 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d60d88f1",
+   "metadata": {},
+   "source": [
+    "## Supervised methods\n",
+    "\n",
+    "### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "61628185",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-3 {color: black;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "category_encoder = {cat:i for i,cat in topic_to_category.items() }\n",
+    "\n",
+    "labels_train_enc = [category_encoder[cat] for cat in labels_train]\n",
+    "labels_val_enc = [category_encoder[cat] for cat in labels_val]\n",
+    "\n",
+    "\n",
+    "\n",
+    "logreg = LogisticRegression()\n",
+    "logreg.fit(train_tdidf_matrix, labels_train_enc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "26a7efd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression train accuracy:  0.9983221476510067\n",
+      "Logistic Regression validation accuracy:  0.9832214765100671\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Logistic Regression train accuracy: \",\n",
+    "      logreg.score(train_tdidf_matrix.toarray(), labels_train_enc))\n",
+    "\n",
+    "print(\"Logistic Regression validation accuracy: \",\n",
+    "      logreg.score(val_tfidf_matrix.toarray(), labels_val_enc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a994bd0c",
+   "metadata": {},
+   "source": [
+    "### SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "a69a3b38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM (Linear Kernel) train accuracy: 0.9991610738255033\n",
+      "SVM (Linear Kernel) validation accuracy: 0.9865771812080537\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svm_linear = SVC(kernel='linear')\n",
+    "svm_linear.fit(train_tdidf_matrix, labels_train_enc)\n",
+    "print(\"SVM (Linear Kernel) train accuracy:\", svm_linear.score(train_tdidf_matrix, labels_train_enc))\n",
+    "print(\"SVM (Linear Kernel) validation accuracy:\", svm_linear.score(val_tfidf_matrix, labels_val_enc))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "8af274d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM (Polynomial Kernel) train accuracy: 1.0\n",
+      "SVM (Polynomial Kernel) validation accuracy: 0.7953020134228188\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_poly = SVC(kernel='poly', )\n",
+    "svm_poly.fit(train_tdidf_matrix, labels_train_enc)\n",
+    "print(\"SVM (Polynomial Kernel) train accuracy:\", svm_poly.score(train_tdidf_matrix, labels_train_enc))\n",
+    "print(\"SVM (Polynomial Kernel) validation accuracy:\", svm_poly.score(val_tfidf_matrix, labels_val_enc))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "8d9fcb70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM (RBF Kernel) train accuracy: 1.0\n",
+      "SVM (RBF Kernel) validation accuracy: 0.9832214765100671\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_poly = SVC(kernel='rbf', )\n",
+    "svm_poly.fit(train_tdidf_matrix, labels_train_enc)\n",
+    "print(\"SVM (RBF Kernel) train accuracy:\", svm_poly.score(train_tdidf_matrix, labels_train_enc))\n",
+    "print(\"SVM (RBF Kernel) validation accuracy:\", svm_poly.score(val_tfidf_matrix, labels_val_enc))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d838b143",
+   "id": "7ea32f12",
    "metadata": {},
    "outputs": [],
    "source": []
